--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                     </div>
                 </div>
 
-                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > .uk-card-default">
-                    <div class="uk-slider-items uk-margin-top" uk-height-match="target: > div > .uk-card-body">
+                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div > img">
+                    <div class="uk-slider-items uk-margin-top" uk-height-match="target: > div > div > .uk-card-body">
 
                         <div id="aac" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
@@ -205,7 +205,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
                                     <div class="fs-12 in">eBook, email &amp; landing page</div>
                                 </div>
-                                <div class="uk-margin-small-top uk-text-center@m">
+                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
                                 </div>
                             </div>
@@ -220,7 +220,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
                                     <div class="fs-12 in">Direct Mail Package</div>
                                 </div>
-                                <div class="uk-margin-small-top uk-text-center@m">
+                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
                                     <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
                                 </div>
-                                <div class="uk-margin-small-top uk-text-center@m">
+                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
                                 </div>
 
@@ -250,7 +250,7 @@
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
                                     <div class="fs-12 in">Multivariate direct mail package</div>
                                 </div>
-                                <div class="uk-margin-small-top uk-text-center@m">
+                                <div class="uk-margin-small uk-text-center@m">
                                     <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
                                 </div>
 
