--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <main class="uk-background-muted">
             <div class="uk-container uk-container-large">
                 <div class="uk-grid uk-flex uk-flex-top uk-margin-large-top" uk-grid>
-                    <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;delay:75;repeat: true;">
-                        <div uk-scrollspy-class="uk-animation-slide-bottom-small uk-animation-fade">
+                    <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;repeat: true;">
+                        <div uk-scrollspy-class="uk-animation-slide-bottom-small">
                             <h1 class="fw-600 uk-margin-left uk-margin-right">Senior marketing designer focused on craft, growth and strategy</h1>
                         </div>
-                        <div class="uk-margin-auto" uk-scrollspy-class="uk-animation-slide-bottom-small uk-animation-fade">
+                        <div class="uk-margin-auto" uk-scrollspy-class="uk-animation-slide-bottom-small">
                             <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</h2>
                         </div>
                     </div>
@@ -126,25 +126,25 @@
                     </div>
 
                     <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light">
-                        <div id="mack-survey" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
+                        <div id="mack-survey" uk-grid uk-scrollspy="target:div;repeat: true;">
                             <div class="uk-width-1-2@s uk-flex uk-flex-middle">
                                 <a href="mack.html">
-                                    <div class="uk-overflow-hidden uk-border-rounded-large" uk-scrollspy-class="uk-animation-fade">
+                                    <div class="uk-overflow-hidden uk-border-rounded-large" uk-scrollspy-class="uk-animation-slide-right-small">
                                         <img src="img/mack/login-2025.webp" />
                                     </div>
                                 </a>
                             </div>
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
-                                    <div uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
+                                    <div uk-scrollspy-class="uk-animation-slide-left-small">
                                         <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
                                     </div>
 
-                                    <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
+                                    <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
                                         <p class="fs-40 fw-600">Evolving a digital survey experience</p>
                                     </div>
 
-                                    <div uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
+                                    <div uk-scrollspy-class="uk-animation-slide-left-small">
                                         <p class="in fs-16">Reimagining a highly successful project I undertook for Mack Trucks with modern design trends, best practices, and a strengthened brand identity.
                                         </p>
                                     </div>
@@ -165,9 +165,9 @@
                     </div>
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
-                        <div id="5w-insights" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
+                        <div id="5w-insights" uk-grid uk-scrollspy="target:div;repeat: true;">
                             <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                                <div class="uk-overflow-hidden uk-border-rounded-large uk-background-default" uk-scrollspy-class="uk-animation-fade">
+                                <div class="uk-overflow-hidden uk-border-rounded-large uk-background-default" uk-scrollspy-class="uk-animation-slide-right-small">
                                     <img src="img/5winsights/Booth-Mockup_2024.jpg" />
                                 </div>
                             </div>
@@ -177,12 +177,12 @@
                                         <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
                                     </div>
 
-                                    <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
+                                    <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
                                         <p class="fs-40 fw-600">Applying new brand standards in support of an upcoming conference
                                         </p>
                                     </div>
 
-                                    <div uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
+                                    <div uk-scrollspy-class="uk-animation-slide-left-small">
                                         <p class="in fs-16">Designs for large-scale booth backdrops, brochures and branded swag.</p>
                                     </div>
 
@@ -225,6 +225,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
@@ -258,6 +259,7 @@
                         </div>
 
                     </div>
+
                 </div>
 
             </div>
