--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 </a>
                             </div>
 
-                            <div class="uk-navbar-item uk-navbar-center uk-visible@s">
+                            <div class="uk-navbar-item uk-navbar-center uk-visible@m">
                                 <ul class="uk-subnav uk-flex-center ">
                                     <li>
                                         <a href>Current Projects<span uk-drop-parent-icon></span></a>
@@ -61,12 +61,12 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@s">
+                            <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@m">
                                 <a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn</a>
                             </div>
 
                             <!-- mobile nav -->
-                            <div class="uk-navbar-item uk-navbar-right uk-hidden@s">
+                            <div class="uk-navbar-item uk-navbar-right uk-hidden@m">
                                 <ul class="uk-navbar-nav">
                                     <li>
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
@@ -127,17 +127,17 @@
 
                     <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light">
                         <div id="mack-survey" uk-grid uk-scrollspy="target:div;repeat: true;">
-                            <div class="uk-width-1-2@s uk-flex uk-flex-middle">
+                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center">
                                 <a href="mack.html">
-                                    <div class="uk-overflow-hidden uk-border-rounded-large" uk-scrollspy-class="uk-animation-slide-right-small">
-                                        <img src="img/mack/login-2025.webp" />
+                                    <div class="uk-overflow-hidden uk-margin-auto" uk-scrollspy-class="uk-animation-slide-right-small">
+                                        <img src="img/mack/login-2025.webp" class="uk-height-max-medium"/>
                                     </div>
                                 </a>
                             </div>
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
-                                    <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
+                                    <div uk-scrollspy-class="uk-animation-slide-bottom-small">
+                                        <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-2 uk-width-1-4@s uk-width-1-5@m" />
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
@@ -166,24 +166,24 @@
 
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
                         <div id="5w-insights" uk-grid uk-scrollspy="target:div;repeat: true;">
-                            <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                                <div class="uk-overflow-hidden uk-border-rounded-large uk-background-default" uk-scrollspy-class="uk-animation-slide-right-small">
-                                    <img src="img/5winsights/Booth-Mockup_2024.jpg" />
+                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center">
+                                <div class="uk-overflow-hidden" uk-scrollspy-class="uk-animation-slide-right-small">
+                                    <img src="img/5winsights/Booth-Mockup_2024.jpg" class="uk-height-max-medium" />
                                 </div>
                             </div>
                             <div class="uk-width-expand uk-flex-first@s uk-flex uk-flex-middle">
                                 <div>
                                     <div uk-scrollspy-class="uk-animation-slide-left-small uk-animation-fade">
-                                        <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2@s uk-width-1-5@m" />
+                                        <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2 uk-width-1-3@s uk-width-1-5@m" />
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p class="fs-40 fw-600">Applying new brand standards in support of an upcoming conference
+                                        <p class="fs-40 fw-600">Applying new brand standards 
                                         </p>
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p class="in fs-16">Designs for large-scale booth backdrops, brochures and branded swag.</p>
+                                        <p class="in fs-16 fw-500">Designs for large-scale booth backdrops, brochures and branded swag in support of an upcoming conference.</p>
                                     </div>
 
                                     <a href="5winsights.html" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted-darker uk-light">Coming soon</a>
@@ -203,10 +203,10 @@
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
-                                    <div class="fs-12 in">eBook, email &amp; landing page</div>
+                                    <div class="fs-12 in fw-500">eBook, email &amp; landing page</div>
                                 </div>
                                 <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                    <div class="uk-label uk-background-muted uk-border-pill fs-12">Coming soon</div>
                                 </div>
                             </div>
                         </div>
@@ -218,10 +218,10 @@
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
-                                    <div class="fs-12 in">Direct Mail Package</div>
+                                    <div class="fs-12 in fw-500">Direct Mail Package</div>
                                 </div>
                                 <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                    <div class="uk-label uk-background-muted uk-border-pill fs-12">Coming soon</div>
                                 </div>
                             </div>
                         </div>
@@ -233,10 +233,10 @@
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
-                                    <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
+                                    <div class="fs-12 in fw-500">Direct mail package, email &amp; survey website</div>
                                 </div>
                                 <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                    <div class="uk-label uk-background-muted uk-border-pill fs-12">Coming soon</div>
                                 </div>
 
                             </div>
@@ -249,10 +249,10 @@
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
-                                    <div class="fs-12 in">Multivariate direct mail package</div>
+                                    <div class="fs-12 in fw-500">Multivariate direct mail package</div>
                                 </div>
                                 <div class="uk-margin-small uk-text-center@m">
-                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                    <div class="uk-label uk-background-muted uk-border-pill fs-12">Coming soon</div>
                                 </div>
 
                             </div>
