--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </div>
 
                 <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div > img">
-                    <div class="uk-slider-items uk-margin-top" uk-height-match="target: > div > div > .uk-card-body">
+                    <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > div > .uk-card-body">
 
                         <div id="aac" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
