--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > div > .uk-card-body">
 
                         <div id="aac" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/aac.webp" class="uk-blend-luminosity" />
                                 </div>
@@ -212,7 +212,7 @@
                         </div>
 
                         <div id="bsa" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
                                 </div>
@@ -227,7 +227,7 @@
                         </div>
                         
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/mack.webp" class="uk-blend-luminosity" />
                                 </div>
