--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                     <div class="uk-slider-items uk-margin-top uk-margin-bottom" uk-height-match="target: > div > div > .uk-card-body">
 
                         <div id="aac" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding-small uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                    <img src="img/aac.webp" class="uk-blend-luminosity" />
+                                    <img src="img/aac.webp" class="" />
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
@@ -212,9 +212,9 @@
                         </div>
 
                         <div id="bsa" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding-small uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                    <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
+                                    <img src="img/bsa-sjac.webp" class="" />
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
@@ -227,9 +227,9 @@
                         </div>
                         
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-small-right">
+                            <div class="uk-background-default uk-card uk-padding-small uk-border-rounded-large uk-margin-small-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                    <img src="img/mack.webp" class="uk-blend-luminosity" />
+                                    <img src="img/mack.webp" class="" />
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
@@ -243,9 +243,9 @@
                         </div>
 
                         <div id="rg" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                            <div class="uk-background-default uk-card uk-padding-small uk-border-rounded-large">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                    <img src="img/rategenius.webp" class="uk-blend-luminosity" />
+                                    <img src="img/rategenius.webp" class="" />
                                 </div>
                                 <div class="uk-card-body uk-padding-remove uk-text-center@m">
                                     <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
