--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center">
+                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center uk-flex-first">
                                 <a href="mack.html">
                                     <div class="uk-overflow-hidden uk-margin-auto" uk-scrollspy-class="uk-animation-fade">
                                         <img src="img/mack/login-2025.webp" class="uk-height-max-medium"/>
@@ -188,7 +188,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center">
+                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center uk-flex-first">
                                 <div class="uk-overflow-hidden" uk-scrollspy-class="uk-animation-fade">
                                     <img src="img/5winsights/Booth-Mockup_2024.jpg" class="uk-height-max-medium" />
                                 </div>
