--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         <a href>Past Work<span uk-drop-parent-icon></span></a>
                                         <div class="uk-dropdown">
                                             <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
-                                                <li class="">Coming Soon</li>
+                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -74,25 +74,20 @@
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
                                                 <li class="uk-nav-header fw-500">Current Projects</li>
                                                 <li><a href="mack.html">Mack Trucks</a></li>
-
+                                                <li><hr /></li>
+                                                
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">
-                                                    Past Work (Coming soon)
+                                                    Past Work
                                                 </li>
-                                                <li class="">5W Insights</li>
-                                                <li class="">American Addiction Centers</li>
-                                                <li class="">Boy Scouts of America</li>
-                                                <li class="">Mack Trucks</li>
-                                                <li class="">RateGenius</li>
+                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
+                                                <li><hr /></li>
 
+                                                <li class="uk-nav-header fw-500">Coming soon</li>
+                                                <li class="">American Addiction Centers<br />Boy Scouts of America<br />Mack Trucks<br />RateGenius</li>
+                                                <li><hr /></li>
+                                                
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">Contact Me</li>
-                                                <li>
-                                                    <a
-                                                       href="https://www.linkedin.com/in/brianfrenchcreative/"
-                                                       class=""
-                                                       target="_blank"
-                                                       >LinkedIn <span uk-icon="link-external"></span
-                                                        ></a>
-                                                </li>
+                                                <li><a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn <span uk-icon="link-external"></span></a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -180,7 +175,7 @@
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <p class="in fs-16 fw-500">Designs for large-scale booth backdrops, brochures and branded swag in support of an upcoming conference.</p>
+                                        <p class="in fs-16 fw-500">Updating designs for large-scale booth backdrops, brochures and branded swag to align with 5W's new identity</p>
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
@@ -190,7 +185,7 @@
                             </div>
                             <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center uk-flex-first">
                                 <div class="uk-overflow-hidden" uk-scrollspy-class="uk-animation-fade">
-                                    <img src="img/5winsights/Booth-Mockup_2024.jpg" class="uk-height-max-medium" />
+                                    <img src="img/5winsights/Booth-Setup_2024.webp" class="uk-height-max-medium" />
                                 </div>
                             </div>
                         </div>
