--- a/mack.html
+++ b/mack.html
@@ -31,7 +31,7 @@
         <!-- End Google Tag Manager (noscript) -->
 
         <header>
-            <div class="uk-inline uk-box-shadow-medium uk-background-muted uk-width-1-1 ">
+            <div class="uk-background-muted ">
                 <div uk-sticky="show-on-up: true">
                     <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
@@ -42,7 +42,7 @@
                                 </a>
                             </div>
 
-                            <div class="uk-navbar-item uk-navbar-center uk-visible@s">
+                            <div class="uk-navbar-item uk-navbar-center uk-visible@m">
                                 <ul class="uk-subnav uk-flex-center ">
                                     <li>
                                         <a href>Current Projects<span uk-drop-parent-icon></span></a>
@@ -56,18 +56,18 @@
                                         <a href>Past Work<span uk-drop-parent-icon></span></a>
                                         <div class="uk-dropdown">
                                             <ul class="uk-nav uk-dropdown-nav uk-list uk-list-large">
-                                                <li class="">Coming Soon</li>
+                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
                                             </ul>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@s">
+                            <div class="uk-navbar-item uk-navbar-right uk-link-reset uk-visible@m">
                                 <a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn</a>
                             </div>
 
                             <!-- mobile nav -->
-                            <div class="uk-navbar-item uk-navbar-right uk-hidden@s">
+                            <div class="uk-navbar-item uk-navbar-right uk-hidden@m">
                                 <ul class="uk-navbar-nav">
                                     <li>
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
@@ -75,25 +75,20 @@
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
                                                 <li class="uk-nav-header fw-500">Current Projects</li>
                                                 <li><a href="mack.html">Mack Trucks</a></li>
-
+                                                <li><hr /></li>
+                                                
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">
-                                                    Past Work (Coming soon)
+                                                    Past Work
                                                 </li>
-                                                <li class="">5W Insights</li>
-                                                <li class="">American Addiction Centers</li>
-                                                <li class="">Boy Scouts of America</li>
-                                                <li class="">Mack Trucks</li>
-                                                <li class="">RateGenius</li>
+                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
+                                                <li><hr /></li>
 
+                                                <li class="uk-nav-header fw-500">Coming soon</li>
+                                                <li class="">American Addiction Centers<br />Boy Scouts of America<br />Mack Trucks<br />RateGenius</li>
+                                                <li><hr /></li>
+                                                
                                                 <li class="uk-nav-header fw-500 uk-margin-large-top">Contact Me</li>
-                                                <li>
-                                                    <a
-                                                       href="https://www.linkedin.com/in/brianfrenchcreative/"
-                                                       class=""
-                                                       target="_blank"
-                                                       >LinkedIn <span uk-icon="link-external"></span
-                                                        ></a>
-                                                </li>
+                                                <li><a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn <span uk-icon="link-external"></span></a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -132,6 +127,7 @@
                                 <ul class="uk-list uk-margin-remove" uk-accordion>
                                     <li class="uk-open">
                                         <a class="uk-accordion-title" href>
+
                                             <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
                                         </a>
                                         <div class="uk-accordion-content">
@@ -223,21 +219,40 @@
                             <div class="uk-section uk-container uk-container-expand" id="login">
                                 <h2 class="fs-18 uk-text-uppercase">// Survey Login</h2>
                                 <hr />
-                                <div class="uk-grid uk-child-width-1-2@s uk-margin" uk-grid uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
+                                <div class="uk-grid uk-child-width-1-2@s uk-margin-medium" uk-grid uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
+
                                     <div>
                                         <a href="img/mack/login-2015.png" data-caption="Original">
                                             <img src="img/mack/login-2015.png" alt="Original"  />
                                         </a>
-                                        <p class="uk-text-bold uk-text-center uk-dark ">Original</p>
+                                        <p class="uk-text-bold uk-text-center">Original</p>
                                     </div>
+
                                     <div>
                                         <a href="img/mack/login-2025.webp" data-caption="Redesign">
                                             <img src="img/mack/login-2025.webp" alt="Redesign"  />
                                         </a>
                                         <p class="uk-text-bold uk-text-center">Redesign</p>
-
                                     </div>
                                 </div>
+                                <!-- <div class="uk-margin uk-position-relative uk-position-z-index-zero" uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
+                                    <div class="uk-text-center" uk-sticky="overflow-flip: true; end: 100%;">
+                                        <a href="img/mack/login-2015.png" data-caption="Original">
+                                            <img src="img/mack/login-2015.png" class="uk-width-4-5@s uk-margin-auto" alt="Original"  />
+                                        </a>
+                                        <div class="uk-background-primary">
+                                        <p class="uk-text-bold uk-text-center uk-dark ">Original</p>
+                                        </div>
+                                    </div>
+                                    <div class="uk-text-center" uk-sticky="overflow-flip: true;end:true">
+                                        <a href="img/mack/login-2025.webp" data-caption="Redesign">
+                                            <img src="img/mack/login-2025.webp" class="uk-width-4-5@s uk-margin-auto" alt="Redesign"  />
+                                        </a>
+                                        <div class="uk-background-primary">
+                                        <p class="uk-text-bold uk-text-center">Redesign</p>
+</div>
+                                    </div>
+                                </div> -->
                             </div>
 
                             <div class="uk-section uk-container uk-container-expand" id="info">
