--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                             </div>
                             <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center uk-flex-first">
                                 <div class="uk-overflow-hidden" uk-scrollspy-class="uk-animation-fade">
-                                    <img src="img/5winsights/Booth-Setup_2024.webp" class="uk-height-max-medium" />
+                                    <a href="5winsights.html">
+                                        <img src="img/5winsights/Booth-Setup_2024.webp" class="uk-height-max-medium" />
+                                    </a>
                                 </div>
                             </div>
                         </div>
