--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                        <a href="5winsights.html" class="uk-button uk-button-default uk-border-pill uk-disabled uk-background-muted-darker uk-light">Coming soon</a>
+                                        <a href="5winsights.html" class="uk-button uk-button-default uk-border-pill warm pulse uk-light">See More</a>
                                     </div>
                                 </div>
                             </div>
