--- a/5winsights.html
+++ b/5winsights.html
@@ -146,7 +146,7 @@
                                         </div>
 
                                         <div uk-scrollspy-class="uk-animation-slide-left-small">
-                                            <p class="in fs-16 fw-500">The 5W Insights booth and marketing collateral received a visual and strategic update for the 2024 Bridge Conference to align with a recent brand refresh.</p>
+                                            <p>The 5W Insights booth and marketing collateral received a visual and strategic update for the 2024 Bridge Conference to align with a recent brand refresh.</p>
                                         </div>
 
                                     </div>
@@ -177,7 +177,7 @@
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small"  />
                                                             </a>
                                                         </div>
-                                                        <div class="in">New</div>
+                                                        <div class="in fw-500">New</div>
                                                     </div>
 
                                                     <div id="bridge-slide-1" class="uk-width-5-6 uk-width-3-4@s ">
@@ -186,7 +186,7 @@
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small"   />
                                                             </a>
                                                         </div>
-                                                        <div class="in">Previous</div>
+                                                        <div class="in fw-500">Previous</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -204,7 +204,7 @@
                                 </div>
 
                                 <div class="uk-width-1-3@s uk-flex uk-flex-middle uk-flex-first@s">
-                                    <p class="in uk-margin-remove">5W's new, bold colors and visuals core to the new branding were used in the new backdrop treatment and the messaging was simplified to a single message.</p>
+                                    <p class="uk-margin-remove">5W's new, bold colors and visuals core to the new branding were used in the new backdrop treatment and the messaging was simplified to a single message.</p>
                                 </div>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                                     <div>
                                         <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
                                     </div>
-                                    <p class="in ">Floor sign</p>
+                                    <div class="in fw-500">Floor sign</div>
                                 </div>
                             </div>
 
@@ -224,7 +224,7 @@
                                     <div>
                                         <img src="img/5winsights/5W_podium_2024.webp" />
                                     </div>
-                                    <p class="in ">Podium wrap</p>
+                                    <div class="in fw-500">Podium wrap</div>
                                 </div>
                             </div>
                         </div>
