--- a/5winsights.html
+++ b/5winsights.html
@@ -245,7 +245,7 @@
                     <div class="uk-background-default uk-padding uk-border-rounded-large">
 
                         <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
-                            <div class="uk-slider-items uk-margin-bottom">
+                            <div class="uk-slider-items">
 
                                 <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
@@ -253,46 +253,38 @@
                                     </div>
                                 </div>
 
-                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
                                         <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
                                     </div>
                                 </div>
 
-                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
                                         <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
                                     </div>
                                 </div>
 
-                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
                                         <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
                                     </div>
                                 </div>
 
-                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
                                         <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
                                     </div>
                                 </div>
 
                             </div>
-
                         </div>
 
-                        <p class="in fw-500">Images for LinkedIn carousel post.</p>
+                        <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
 
                     </div>
-
-
                 </div>
             </div>
-
-
-
-
-
         </main>
 
         <footer class="uk-background-muted uk-section-small ">
