--- a/5winsights.html
+++ b/5winsights.html
@@ -162,7 +162,7 @@
                         </div>
                     </div>
 
-                    <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
+                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin">
 
                         <div class="uk-grid-large" uk-grid>
 
@@ -174,19 +174,19 @@
                                         <div class="uk-slider-container">
                                             <div class="uk-slider-items" uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
 
-                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-3-4@s ">
-                                                    <div class="uk-margin-small-right">
+                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
+                                                    <div class="">
                                                         <a href="img/5winsights/5W_10x10-BOOTH_2024.webp" data-caption="New">
-                                                            <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small"  />
+                                                            <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-height-max-large"  />
                                                         </a>
                                                     </div>
                                                     <div class="in fw-500">New</div>
                                                 </div>
 
-                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-3-4@s ">
-                                                    <div class="uk-margin-small-right">
+                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
+                                                    <div class="">
                                                         <a href="img/5winsights/5W_10x10-BOOTH_2023.webp" data-caption="Previous">
-                                                            <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small"   />
+                                                            <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-height-max-large"   />
                                                         </a>
                                                     </div>
                                                     <div class="in fw-500">Previous</div>
@@ -206,15 +206,15 @@
 
                             </div>
 
-                            <div class="uk-width-1-3@s uk-flex uk-flex-middle uk-flex-first@s">
-                                <p class="uk-margin-remove">5W's new, bold colors and visuals core to the new branding were used in the new backdrop treatment and the messaging was simplified to a single message.</p>
+                            <div class="uk-width-1-4@s uk-flex uk-flex-middle uk-flex-first@s">
+                                <p class="uk-margin-remove-bottom uk-width-4-5@s uk-margin-auto">5W's new, bold colors and visuals core to the new branding were used in the new backdrop treatment and the messaging was simplified to a single message.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="uk-grid" uk-grid>
                         <div class="uk-width-1-3">
-                            <div class="uk-card uk-background-default uk-card-body uk-card-small uk-border-rounded-large" id="booth">
+                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth">
                                 <div>
                                     <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
                                 </div>
@@ -223,7 +223,7 @@
                         </div>
 
                         <div class="uk-width-2-3">
-                            <div class="uk-card uk-background-default uk-card-body uk-card-small uk-border-rounded-large" id="podium">
+                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="podium">
                                 <div>
                                     <img src="img/5winsights/5W_podium_2024.webp" />
                                 </div>
@@ -242,7 +242,7 @@
                         <hr />
                     </div>
 
-                    <div class="uk-background-default uk-padding uk-border-rounded-large">
+                    <div class="uk-background-default uk-padding-small uk-border-rounded-large">
 
                         <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
                             <div class="uk-slider-items">
